--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
   <title>natalie uduwela</title>
   <link rel="stylesheet" href="style.css">
+  <meta name="description" content="I make things."/>
+  <meta name="keywords" content="Natalie, Uduwela"/>
+  <meta name="author" content="Natalie Uduwela"/>
+  <link rel="shortcut icon" href="" type="image/x-icon">
 </head>
 <body>
   <div id="container">
