--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>natalie uduwela</title>
   <link rel="stylesheet" href="style.css">
   <meta name="description" content="I make things."/>
@@ -9,13 +10,22 @@
   <link rel="shortcut icon" href="" type="image/x-icon">
 </head>
 <body>
+
+  <header>
+    <nav>
+    </nav>
+  </header>
+
   <div id="container">
     <div class="greeting">
       hello world.<br/><br/>
       i'm natalie,<br/>
-      <a href="http://natatdbc.tumblr.com">a soon-to-be web developer.</a><br/><br/>
+      <a href="http://natatdbc.tumblr.com">& I code things.</a><br/><br/>
       more to come.
     </div>
   </div>
+
+  <footer></footer>
+
 </body>
 </html>
