--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
 
   <div id="container">
     <div class="greeting">
-      hello world.<br/><br/>
       i'm natalie,<br/>
       <a href="http://natatdbc.tumblr.com">& I code things.</a><br/><br/>
-      more to come.
+      <a class="linked" href="http://www.linkedin.com/in/natalieuduwela">linkedin</a>
     </div>
   </div>
 
