--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <div id="container">
     <div class="greeting">
-      i'm natalie,<br/>
+      i'm natalie,
       <a href="http://natatdbc.tumblr.com">& I code things.</a><br/><br/>
       <a class="linked" href="http://www.linkedin.com/in/natalieuduwela">linkedin</a>
     </div>
