adding portfolio images

--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="css/style.css">
+  <script src="vendors/jquery.js"></script>
+  <script src="js/pallet.js"></script>
+
   <title>natalie uduwela</title>
-  <link rel="stylesheet" href="style.css">
   <meta name="description" content="I make things."/>
   <meta name="keywords" content="Natalie, Uduwela"/>
   <meta name="author" content="Natalie Uduwela"/>
@@ -18,13 +21,33 @@
 
   <div id="container">
     <div class="greeting">
-      i'm natalie,
-      <a href="http://natatdbc.tumblr.com">& I code things.</a><br/><br/>
-      <a class="linked" href="http://www.linkedin.com/in/natalieuduwela">linkedin</a>
+      Hi, I'm Natalie.
+    </div>
+    <div class="picture">
+    </div>
+    <div class="info">
+      In a previous life, I studied architecture and made <a class="hands" href="#">a lot of things with my hands.</a>
+      <br/>Now, <a href="#">I code things.</a>
+    </div>
+    <div class="images hidden">
+      <img class="img pallet_1" src="images/pallet_1.jpg">
+      <span class="left"><</span>
+      <a class="nav-back hidden" href="#"><</a>
+      <a class="nav-forward" href="#">></a>
+      <span class="right hidden">></span>
+      <div class="nav-list">
+        <ul>
+          <li><a class="active" href="#">a disaster relief pallet house</a></li>
+          <li><a href="#">books</a></li>
+          <li><a href="#">silkscreened shirts</a></li>
+          <li><a href="#">sewed tanks</a></li>
+        </ul>
+      </div>
     </div>
   </div>
 
-  <footer></footer>
-
+  <div class="footer">
+    <a class="linked" href="http://www.linkedin.com/in/natalieuduwela">linkedin</a>
+  </div>
 </body>
 </html>
