--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script src="vendors/jquery.js"></script>
   <script src="js/pallet.js"></script>
 
-  <title>natalie uduwela</title>
+  <title>Natalie Uduwela - site in progress</title>
   <meta name="description" content="I make things."/>
   <meta name="keywords" content="Natalie, Uduwela"/>
   <meta name="author" content="Natalie Uduwela"/>
@@ -27,7 +27,10 @@
     </div>
     <div class="info">
       In a previous life, I studied architecture and made <a class="hands" href="#">a lot of things with my hands.</a>
-      <br/>Now, <a href="#">I code things.</a>
+      <br/>I also dabbled in <a href="#">print & graphic design.</a>
+      <div class="code">
+        Now, <a href="#">I code things.</a>
+      </div>
     </div>
     <div class="images hidden">
       <img class="img pallet_1" src="images/pallet_1.jpg">
@@ -35,12 +38,17 @@
       <a class="nav-back hidden" href="#"><</a>
       <a class="nav-forward" href="#">></a>
       <span class="right hidden">></span>
-      <div class="nav-list">
+      <div class="nav-list built">
         <ul>
           <li><a class="active" href="#">a disaster relief pallet house</a></li>
+          <li><a href="#">sets</a></li>
           <li><a href="#">books</a></li>
+          <li><a href="#">tanks</a></li>
+        </ul>
+      </div>
+      <div class="nav-list design hidden">
+        <ul>
           <li><a href="#">silkscreened shirts</a></li>
-          <li><a href="#">sewed tanks</a></li>
         </ul>
       </div>
     </div>
