image nav bugfix

--- a/index.html
+++ b/index.html
@@ -26,23 +26,28 @@
     </div>
     <div class="info">
       In a previous life, I studied architecture and made <a class="hands" href="#">a lot of things with my hands.</a>
-      <br/>I also dabbled in <a href="#">print & graphic design.</a>
+      <br/>I also dabbled in print & graphic design.
       <div class="code">
         Now, <a class="code" href="#">I code things.</a>
       </div>
     </div>
     <div class="images built hidden">
       <img class="img pallet_1" src="images/pallet/pallet_1.jpg">
-      <span class="left"><</span>
-      <a class="nav-back hidden" href="#"><</a>
-      <a class="nav-forward" href="#">></a>
-      <span class="right hidden">></span>
       <div class="nav-list built">
         <ul>
           <li><a class="active pallet" href="#">a disaster relief pallet house</a></li>
-          <li><a class="shirts" href="#">shirts</a></li>
-          <li><a class="tanks" href="#">tanks</a><span class="tanks-vid hidden"> <a href="https://www.youtube.com/watch?v=2Ny6Sve3v5s" target="_blank">watch</a></span></li>
+          <li><a class="shirts" href="#">shirts</a>
+            <span class="shirts-nav hidden">// <a class="gcb" href="#">gcb</a> <a class="sunsout" href="#">sun's out</a> <a class="turkey" href="#">turkey</a></span>
+          </li>
+          <li><a class="tanks" href="#">tanks</a>
+            <span class="tanks-vid hidden">// <a href="https://www.youtube.com/watch?v=2Ny6Sve3v5s" target="_blank">watch</a></span></li>
           <li><a class="books" href="#">books</a></li>
+        </ul>
+        <ul>
+          <li class="nav"><span class="left"><</span>
+          <a class="nav-back hidden" href="#"><</a>
+          <a class="nav-forward" href="#">></a>
+          <span class="right hidden">></span></li>
         </ul>
       </div>
     </div>
