design images added

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     <div class="info">
       In a previous life, I studied architecture and made <a class="hands" href="#">a lot of things with my hands.</a>
-      <br/>I also dabbled in print & graphic design.
+      <br/>I also dabbled in <a class="design" href="#">print & graphic design.</a>
       <div class="code">
         Now, <a class="code" href="#">I code things.</a>
       </div>
@@ -37,7 +37,7 @@
         <ul>
           <li><a class="active pallet" href="#">a disaster relief pallet house</a></li>
           <li><a class="shirts" href="#">shirts</a>
-            <span class="shirts-nav hidden">// <a class="gcb" href="#">gcb</a> <a class="sunsout" href="#">sun's out</a> <a class="turkey" href="#">turkey</a></span>
+            <span class="shirts-nav hidden">// <a class="gcb" href="#">gcb</a> <a class="sunsout" href="#">sun's out</a> <a class="turkey" href="#">turkey</a> <a class="supagay" href="#">supagay</a></span>
           </li>
           <li><a class="tanks" href="#">tanks</a>
             <span class="tanks-vid hidden">// <a href="https://www.youtube.com/watch?v=2Ny6Sve3v5s" target="_blank">watch</a></span></li>
@@ -51,10 +51,22 @@
         </ul>
       </div>
     </div>
-    <div class="nav-list design hidden">
-      <ul>
-        <li><a href="#">silkscreened shirts</a></li>
-      </ul>
+    <div class="images design hidden">
+      <img class="d-img gcb" src="images/design/shirts/gcb.jpg">
+      <div class="nav-list design">
+        <ul>
+          <li><a class="d-shirts active" href="#">shirts</a></li>
+          <li><a class="d-prints" href="#">prints</a>
+            <span class="prints-nav hidden">// <a class="gr8" href="#">gr8</a> <a class="cali" href="#">lost&found</a></span></li>
+          <li><a class="d-internship" href="#">internship</a></li>
+        </ul>
+        <ul>
+          <li class="nav"><span class="left"><</span>
+          <a class="nav-back hidden" href="#"><</a>
+          <a class="nav-forward" href="#">></a>
+          <span class="right hidden">></span></li>
+        </ul>
+      </div>
     </div>
     <div class="nav-code hidden">
       <ul>
@@ -66,7 +78,7 @@
       </ul>
     </div>
     <div class="contact hidden">
-      you can find me roaming the streets of san francisco,<br/>
+      you can find me roaming the streets of san francisco<br/>
       or reach me at natuduwela@gmail.com
     </div>
   </div>
@@ -77,7 +89,7 @@
       <li><a class="bottom-link" href="http://natatdbc.tumblr.com" target="_blank">blog</a></li>
       <li><a class="bottom-link" href="http://dl.dropboxusercontent.com/u/36316618/20131129_natalieuduwela.pdf" target="_blank">resume</a></li>
       <li><a class="bottom-link" href="http://www.linkedin.com/in/natalieuduwela" target="_blank">linkedin</a></li>
-      <li><span class="bottom-link">site in progress.</span></li>
+      <li><span class="bottom"></span></li>
     </ul>
   </div>
 </body>
@@ -86,6 +98,9 @@
   <script src="js/shirts.js"></script>
   <script src="js/tanks.js"></script>
   <script src="js/books.js"></script>
+  <script src="js/design_shirts.js"></script>
+  <script src="js/design_prints.js"></script>
+  <script src="js/design_internship.js"></script>
   <script src="js/contact.js"></script>
   <script src="js/code.js"></script>
   <script src="js/bind.js"></script>
