div to load images

--- a/index.html
+++ b/index.html
@@ -92,6 +92,35 @@
       <li><span class="bottom"></span></li>
     </ul>
   </div>
+
+  <div class="hidden">
+    <img src="images/books/books_1.jpg">
+    <img src="images/books/books_2.jpg">
+    <img src="images/pallet/pallet_1.jpg">
+    <img src="images/pallet/pallet_2.jpg">
+    <img src="images/pallet/pallet_3.jpg">
+    <img src="images/shirts/gcb_1.jpg">
+    <img src="images/shirts/gcb_2.jpg">
+    <img src="images/shirts/sunsout_1.jpg">
+    <img src="images/shirts/turkey_1.jpg">
+    <img src="images/shirts/supagay_1.jpg">
+    <img src="images/shirts/supagay_2.jpg">
+    <img src="images/tanks/tanks_1.jpg">
+    <img src="images/tanks/tanks_2.jpg">
+    <img src="images/design/shirts/gcb.jpg">
+    <img src="images/design/shirts/sunsout.jpg">
+    <img src="images/design/shirts/turkey_1.jpg">
+    <img src="images/design/shirts/turkey_2.jpg">
+    <img src="images/design/gr8/gr8_1.jpg">
+    <img src="images/design/gr8/gr8_2.jpg">
+    <img src="images/design/gr8/gr8_3.jpg">
+    <img src="images/design/gr8/gr8_4.jpg">
+    <img src="images/design/cali/cali_1.jpg">
+    <img src="images/design/cali/cali_2.jpg">
+    <img src="images/design/cali/cali_3.jpg">
+    <img src="images/design/cradles/cradles_1.jpg">
+    <img src="images/design/cradles/cradles_2.jpg">
+  </div>
 </body>
   <script src="js/nav.js"></script>
   <script src="js/pallet.js"></script>
