--- a/index.html
+++ b/index.html
@@ -22,8 +22,6 @@
     <div class="greeting">
       Hi, I'm Natalie.
     </div>
-    <div class="picture">
-    </div>
     <div class="info">
       In a previous life, I studied architecture and made <a class="hands" href="#">a lot of things with my hands.</a>
       <br/>I also dabbled in <a class="design" href="#">print & graphic design.</a>
@@ -78,8 +76,11 @@
       </ul>
     </div>
     <div class="contact hidden">
-      you can find me roaming the streets of san francisco<br/>
-      or reach me at natuduwela@gmail.com
+      <div class="picture">
+        <img class="me" src="images/nat.png"><br/><br/>
+      </div>
+      <span class="contact">you can find me roaming the streets of san francisco<br/>
+      or reach me at natuduwela@gmail.com</span>
     </div>
   </div>
 
@@ -89,6 +90,7 @@
       <li><a class="bottom-link" href="http://natatdbc.tumblr.com" target="_blank">blog</a></li>
       <li><a class="bottom-link" href="http://dl.dropboxusercontent.com/u/36316618/20131129_natalieuduwela.pdf" target="_blank">resume</a></li>
       <li><a class="bottom-link" href="http://www.linkedin.com/in/natalieuduwela" target="_blank">linkedin</a></li>
+      <li><a class="bottom-link" href="http://www.natalieuduwela.com">reset</a></li>
       <li><span class="bottom"></span></li>
     </ul>
   </div>
