fix active on hover

--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
     <div class="nav-code hidden">
       <ul>
         <li class="dbc">made while at<br/>dev bootcamp:</li>
-        <li><a class="proj-link" href="http://noreservations.herokuapp.com" target="_blank">no reservations</a><a class="github hidden" href="https://github.com/gopher-snakes-2013/wait-for-it" target="_blank"> (github)</a></li>
-        <li><a class="proj-link" href="http://gophlix.herokuapp.com" target="_blank">gophlix</a><a class="github hidden" href="https://github.com/gopher-snakes-2013/gophlix" target="_blank"> (github)</a></li>
-        <li><a class="proj-link" href="http://typeitout.herokuapp.com" target="_blank">type it out</a><a class="github hidden" href="https://github.com/natatat/I-m-Not-Your-Type" target="_blank"> (github)</a></li>
-        <li><a class="proj-link" href="http://funniez.herokuapp.com" target="_blank">jokez</a><a class="github hidden" href="https://github.com/natatat/thundercats" target="_blank"> (github)</a></li>
+        <li><a class="proj-link" href="http://noreservations.herokuapp.com" target="_blank">no reservations</a><a class="proj-link github hidden" href="https://github.com/gopher-snakes-2013/wait-for-it" target="_blank"> (github)</a></li>
+        <li><a class="proj-link" href="http://gophlix.herokuapp.com" target="_blank">gophlix</a><a class="proj-link github hidden" href="https://github.com/gopher-snakes-2013/gophlix" target="_blank"> (github)</a></li>
+        <li><a class="proj-link" href="http://typeitout.herokuapp.com" target="_blank">type it out</a><a class="proj-link github hidden" href="https://github.com/natatat/I-m-Not-Your-Type" target="_blank"> (github)</a></li>
+        <li><a class="proj-link" href="http://funniez.herokuapp.com" target="_blank">jokez</a><a class="proj-link github hidden" href="https://github.com/natatat/thundercats" target="_blank"> (github)</a></li>
       </ul>
     </div>
     <div class="contact hidden">
