remove EVERYTHING from index.html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/new.css">
   <script src="vendors/jquery.js"></script>
 
   <title>natalieuduwela.com</title>
@@ -13,126 +14,19 @@
 </head>
 <body>
 
-  <header>
-    <nav>
-    </nav>
-  </header>
-
   <div id="container">
-    <div class="greeting">
-      Hi, I'm Natalie.
+    <div class="name">
+      natalie uduwela
     </div>
-    <div class="info">
-      In a previous life, I studied architecture and made <a class="hands" href="#">a lot of things with my hands.</a>
-      <br/>I also dabbled in <a class="design" href="#">print & graphic design.</a>
-      <div class="code">
-        Now, <a class="code" href="#">I code things.</a>
-      </div>
-    </div>
-    <div class="images built hidden">
-      <img class="img pallet_1" src="images/pallet/pallet_1.jpg">
-      <div class="nav-list built">
-        <ul>
-          <li><a class="active pallet" href="#">a disaster relief pallet house</a></li>
-          <li><a class="shirts" href="#">shirts</a>
-            <span class="shirts-nav hidden">// <a class="gcb" href="#">gcb</a> <a class="sunsout" href="#">sun's out</a> <a class="turkey" href="#">turkey</a> <a class="supagay" href="#">supagay</a></span>
-          </li>
-          <li><a class="tanks" href="#">tanks</a>
-            <span class="tanks-vid hidden">// <a href="https://www.youtube.com/watch?v=2Ny6Sve3v5s" target="_blank">watch</a></span></li>
-          <li><a class="books" href="#">books</a></li>
-        </ul>
-        <ul>
-          <li class="nav"><span class="left"><</span>
-          <a class="nav-back hidden" href="#"><</a>
-          <a class="nav-forward" href="#">></a>
-          <span class="right hidden">></span></li>
-        </ul>
-      </div>
-    </div>
-    <div class="images design hidden">
-      <img class="d-img gcb" src="images/design/shirts/gcb.jpg">
-      <div class="nav-list design">
-        <ul>
-          <li><a class="d-shirts active" href="#">shirts</a></li>
-          <li><a class="d-prints" href="#">prints</a>
-            <span class="prints-nav hidden">// <a class="gr8" href="#">gr8</a> <a class="cali" href="#">lost&found</a></span></li>
-          <li><a class="d-internship" href="#">internship</a></li>
-        </ul>
-        <ul>
-          <li class="nav"><span class="left"><</span>
-          <a class="nav-back hidden" href="#"><</a>
-          <a class="nav-forward" href="#">></a>
-          <span class="right hidden">></span></li>
-        </ul>
-      </div>
-    </div>
-    <div class="nav-code hidden">
-      <ul>
-        <li class="dbc">made while at<br/>dev bootcamp:</li>
-        <li><a class="proj-link" href="http://noreservations.herokuapp.com" target="_blank">no reservations</a><a class="proj-link github hidden" href="https://github.com/gopher-snakes-2013/wait-for-it" target="_blank"> (github)</a></li>
-        <li><a class="proj-link" href="http://gophlix.herokuapp.com" target="_blank">gophlix</a><a class="proj-link github hidden" href="https://github.com/gopher-snakes-2013/gophlix" target="_blank"> (github)</a></li>
-        <li><a class="proj-link" href="http://typeitout.herokuapp.com" target="_blank">type it out</a><a class="proj-link github hidden" href="https://github.com/natatat/I-m-Not-Your-Type" target="_blank"> (github)</a></li>
-        <li><a class="proj-link" href="http://funniez.herokuapp.com" target="_blank">jokez</a><a class="proj-link github hidden" href="https://github.com/natatat/thundercats" target="_blank"> (github)</a></li>
+
+    <div class="footer">
+      <ul class="foot-nav">
+        <li><a class="bottom-link" href="http://natatdbc.tumblr.com" target="_blank">blog</a></li>
+        <li><a class="bottom-link" href="http://dl.dropboxusercontent.com/u/36316618/20131129_natalieuduwela.pdf" target="_blank">resume</a></li>
+        <li><a class="bottom-link" href="http://www.linkedin.com/in/natalieuduwela" target="_blank">linkedin</a></li>
+        <li><span class="bottom"></span></li>
       </ul>
     </div>
-    <div class="contact hidden">
-      <div class="picture">
-        <img class="me" src="images/nat.png"><br/><br/>
-      </div>
-      <span class="contact">you can find me roaming the streets of san francisco<br/>
-      or reach me at natuduwela@gmail.com</span>
-    </div>
-  </div>
-
-  <div class="footer">
-    <ul class="foot-nav">
-      <li><a class="bottom-link contact" href="#">contact</a></li>
-      <li><a class="bottom-link" href="http://natatdbc.tumblr.com" target="_blank">blog</a></li>
-      <li><a class="bottom-link" href="http://dl.dropboxusercontent.com/u/36316618/20131129_natalieuduwela.pdf" target="_blank">resume</a></li>
-      <li><a class="bottom-link" href="http://www.linkedin.com/in/natalieuduwela" target="_blank">linkedin</a></li>
-      <li><a class="bottom-link" href="http://www.natalieuduwela.com">reset</a></li>
-      <li><span class="bottom"></span></li>
-    </ul>
-  </div>
-
-  <div class="hidden">
-    <img src="images/books/books_1.jpg">
-    <img src="images/books/books_2.jpg">
-    <img src="images/pallet/pallet_1.jpg">
-    <img src="images/pallet/pallet_2.jpg">
-    <img src="images/pallet/pallet_3.jpg">
-    <img src="images/shirts/gcb_1.jpg">
-    <img src="images/shirts/gcb_2.jpg">
-    <img src="images/shirts/sunsout_1.jpg">
-    <img src="images/shirts/turkey_1.jpg">
-    <img src="images/shirts/supagay_1.jpg">
-    <img src="images/shirts/supagay_2.jpg">
-    <img src="images/tanks/tanks_1.jpg">
-    <img src="images/tanks/tanks_2.jpg">
-    <img src="images/design/shirts/gcb.jpg">
-    <img src="images/design/shirts/sunsout.jpg">
-    <img src="images/design/shirts/turkey_1.jpg">
-    <img src="images/design/shirts/turkey_2.jpg">
-    <img src="images/design/gr8/gr8_1.jpg">
-    <img src="images/design/gr8/gr8_2.jpg">
-    <img src="images/design/gr8/gr8_3.jpg">
-    <img src="images/design/gr8/gr8_4.jpg">
-    <img src="images/design/cali/cali_1.jpg">
-    <img src="images/design/cali/cali_2.jpg">
-    <img src="images/design/cali/cali_3.jpg">
-    <img src="images/design/cradles/cradles_1.jpg">
-    <img src="images/design/cradles/cradles_2.jpg">
   </div>
 </body>
-  <script src="js/nav.js"></script>
-  <script src="js/pallet.js"></script>
-  <script src="js/shirts.js"></script>
-  <script src="js/tanks.js"></script>
-  <script src="js/books.js"></script>
-  <script src="js/design_shirts.js"></script>
-  <script src="js/design_prints.js"></script>
-  <script src="js/design_internship.js"></script>
-  <script src="js/contact.js"></script>
-  <script src="js/code.js"></script>
-  <script src="js/bind.js"></script>
 </html>
