--- a/index.html
+++ b/index.html
@@ -2,31 +2,74 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/new.css">
-  <script src="vendors/jquery.js"></script>
+  <link href="http://d2v52k3cl9vedd.cloudfront.net/basscss/4.1.7/basscss.min.css" rel="stylesheet">
+  <link href="./css/index.css" rel="stylesheet">
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/Chart.js/0.2.0/Chart.min.js"></script>
 
   <title>natalieuduwela.com</title>
-  <meta name="description" content="I make things."/>
-  <meta name="keywords" content="Natalie, Uduwela"/>
+  <meta name="description" content="maker + coder"/>
+  <meta name="keywords" content="Natalie, Uduwela, San Francisco, Web Development"/>
   <meta name="author" content="Natalie Uduwela"/>
   <link rel="shortcut icon" href="" type="image/x-icon">
 </head>
+
 <body>
 
-  <div id="container">
-    <div class="name">
-      natalie uduwela
-    </div>
+  <div class="container">
+    <div class="clearfix">
 
-    <div class="footer">
-      <ul class="foot-nav">
-        <li><a class="bottom-link" href="http://natatdbc.tumblr.com" target="_blank">blog</a></li>
-        <li><a class="bottom-link" href="http://dl.dropboxusercontent.com/u/36316618/20131129_natalieuduwela.pdf" target="_blank">resume</a></li>
-        <li><a class="bottom-link" href="http://www.linkedin.com/in/natalieuduwela" target="_blank">linkedin</a></li>
-        <li><span class="bottom"></span></li>
-      </ul>
+      <div class="col-10 px2 mx-auto">
+        <h1 class="mb0">I'm Natalie Uduwela;</h1>
+        <h2 class="mt0">I <a href="http://www.github.com/natatat">code</a>, make stuff, and often find myself out in the world.</h2>
+
+        <div class="skills-graph">
+          <canvas id="myChart" width="400" height="400"></canvas>
+        </div>
+
+        <div class="adventure italic">choose your own adventure...</div>
+
+        <ul class="list-reset">
+          <li><a href="http://natatdbc.tumblr.com" target="_blank">read about this thing I did</a></li>
+          <li><a href="http://dl.dropboxusercontent.com/u/36316618/20131129_natalieuduwela.pdf" target="_blank">check out my resume</a></li>
+          <li><a href="http://www.linkedin.com/in/natalieuduwela" target="_blank">meet the professional me</a></li>
+        </ul>
+      </div>
+
     </div>
   </div>
+
 </body>
+
+<script>
+  // Get context with jQuery - using jQuery's .get() method.
+  var ctx = document.getElementById("myChart").getContext("2d");
+  // This will get the first returned node in the jQuery collection.
+  var data = {
+      labels: ["January", "February", "March", "April", "May", "June", "July"],
+      datasets: [
+          {
+              label: "My First dataset",
+              fillColor: "rgba(220,220,220,0.2)",
+              strokeColor: "rgba(220,220,220,1)",
+              pointColor: "rgba(220,220,220,1)",
+              pointStrokeColor: "#fff",
+              pointHighlightFill: "#fff",
+              pointHighlightStroke: "rgba(220,220,220,1)",
+              data: [65, 59, 80, 81, 56, 55, 40]
+          },
+          {
+              label: "My Second dataset",
+              fillColor: "rgba(151,187,205,0.2)",
+              strokeColor: "rgba(151,187,205,1)",
+              pointColor: "rgba(151,187,205,1)",
+              pointStrokeColor: "#fff",
+              pointHighlightFill: "#fff",
+              pointHighlightStroke: "rgba(151,187,205,1)",
+              data: [28, 48, 40, 19, 86, 27, 90]
+          }
+      ]
+  };
+  var myLineChart = new Chart(ctx).Line(data);
+</script>
 </html>
