edit copy, comment out graph for now

--- a/index.html
+++ b/index.html
@@ -21,18 +21,17 @@
 
       <div class="col-10 px2 mx-auto">
         <h1 class="mb0">I'm Natalie Uduwela;</h1>
-        <h2 class="mt0">I <a href="http://www.github.com/natatat">code</a>, make stuff, and often find myself out in the world.</h2>
-
+        <h2 class="mt0"><a href="http://www.github.com/natatat">coder</a> + designer + maker</h2>
+<!--
         <div class="skills-graph">
           <canvas id="myChart" width="400" height="400"></canvas>
         </div>
-
-        <div class="adventure italic">choose your own adventure...</div>
-
+ -->
+        <div class="italic bold">Want more?</div>
         <ul class="list-reset">
-          <li><a href="http://natatdbc.tumblr.com" target="_blank">read about this thing I did</a></li>
-          <li><a href="http://dl.dropboxusercontent.com/u/36316618/20131129_natalieuduwela.pdf" target="_blank">check out my resume</a></li>
-          <li><a href="http://www.linkedin.com/in/natalieuduwela" target="_blank">meet the professional me</a></li>
+          <li><a href="http://natatdbc.tumblr.com" target="_blank">Read about this thing I did</a></li>
+          <li><a href="http://dl.dropboxusercontent.com/u/36316618/20131129_natalieuduwela.pdf" target="_blank">Check out my resume</a></li>
+          <li><a href="http://www.linkedin.com/in/natalieuduwela" target="_blank">Meet the professional me</a></li>
         </ul>
       </div>
 
