--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <link href="http://d2v52k3cl9vedd.cloudfront.net/basscss/4.1.7/basscss.min.css" rel="stylesheet">
   <link href="./css/index.css" rel="stylesheet">
   <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/Chart.js/0.2.0/Chart.min.js"></script>
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <meta name="viewport" content="width=device-width, user-scalable=no"/>
 
   <title>natalieuduwela.com</title>
-  <meta name="description" content="maker + coder"/>
-  <meta name="keywords" content="Natalie, Uduwela, San Francisco, Web Development"/>
+  <meta name="description" content="coder + designer + maker"/>
+  <meta name="keywords" content="Natalie, Uduwela, San Francisco, Web Development, Web Design, Javascript"/>
   <meta name="author" content="Natalie Uduwela"/>
-  <link rel="shortcut icon" href="" type="image/x-icon">
 </head>
 
 <body>
