--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/Chart.js/0.2.0/Chart.min.js"></script>
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
-  <meta name="viewport" content="width=device-width, user-scalable=no"/>
+  <meta name="viewport" content="width=device-width"/>
 
   <title>natalieuduwela.com</title>
   <meta name="description" content="coder + designer + maker"/>
