--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       <div class="col-10 px2 mx-auto">
         <h1 class="mb0 md-show">I'm Natalie Uduwela;</h1>
         <h2 class="mb0 md-hide">I'm Natalie Uduwela;</h2>
-        <h2 class="mt0 md-show"><a href="http://www.github.com/natatat">coder</a> + designer + maker</h2>
-        <h3 class="mt0 md-hide"><a href="http://www.github.com/natatat">coder</a> + designer + maker</h3>
+        <h2 class="mt0 md-show"><a href="http://www.github.com/natatat" target="_blank">coder</a> + designer + maker</h2>
+        <h3 class="mt0 md-hide"><a href="http://www.github.com/natatat" target="_blank">coder</a> + designer + maker</h3>
 <!--
         <div class="skills-graph">
           <canvas id="myChart" width="400" height="400"></canvas>
