--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <link href="http://d2v52k3cl9vedd.cloudfront.net/basscss/4.1.7/basscss.min.css" rel="stylesheet">
-  <link href="./css/index.css" rel="stylesheet">
-  <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.1/Chart.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <meta name="viewport" content="width=device-width"/>
 
@@ -13,6 +10,15 @@
   <meta name="description" content="coder + designer + maker"/>
   <meta name="keywords" content="Natalie, Uduwela, San Francisco, Web Development, Web Design, Javascript"/>
   <meta name="author" content="Natalie Uduwela"/>
+
+  <!-- start Google Analytics -->
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+  </script>
+  <!-- end Google Analytics -->
 </head>
 
 <body>
@@ -28,9 +34,9 @@
           <h3 class="mt0 md-hide"><a href="http://www.github.com/natatat" target="_blank">coder</a> + designer + maker</h3>
         </div>
 
-        <div class="skills-graph">
+<!--         <div class="skills-graph">
           <canvas id="chart" height="120"></canvas>
-        </div>
+        </div> -->
 
         <div class="mt2">
           <div class="italic bold">Want more?</div>
@@ -45,6 +51,7 @@
     </div>
   </div>
 
+  <script type="application/javascript" src="mergedAssets.js"></script>
+  <script type="application/javascript" src="app.js"></script>
 </body>
-<script type="text/javascript" src="js/chart.js"></script>
 </html>
