remove build dir and instead copy to public

--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
     </div>
   </div>
 
-  <script type="application/javascript" src="mergedAssets.js"></script>
-  <script type="application/javascript" src="app.js"></script>
+  <script type="application/javascript" src="js/mergedAssets.js"></script>
+  <script type="application/javascript" src="js/app.js"></script>
 </body>
 </html>
