--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <link rel="stylesheet" type="text/css" href="public/css/styles.css">
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <meta name="viewport" content="width=device-width"/>
 
@@ -51,7 +51,7 @@
     </div>
   </div>
 
-  <script type="application/javascript" src="js/mergedAssets.js"></script>
-  <script type="application/javascript" src="js/app.js"></script>
+  <script type="application/javascript" src="public/js/mergedAssets.js"></script>
+  <script type="application/javascript" src="public/js/app.js"></script>
 </body>
 </html>
