edit index.html, add ga tracking

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <link rel="stylesheet" type="text/css" href="public/css/styles.css">
+  <link rel="stylesheet" type="text/css" href="build/css/styles.css">
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <meta name="viewport" content="width=device-width"/>
 
@@ -17,6 +17,7 @@
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-36982620-1', 'auto');
   </script>
   <!-- end Google Analytics -->
 </head>
@@ -51,7 +52,7 @@
     </div>
   </div>
 
-  <script type="application/javascript" src="public/js/mergedAssets.js"></script>
-  <script type="application/javascript" src="public/js/app.js"></script>
+  <script type="application/javascript" src="build/mergedAssets.js"></script>
+  <script type="application/javascript" src="build/app.js"></script>
 </body>
 </html>
