hide nav for now

--- a/public/index.html
+++ b/public/index.html
@@ -23,20 +23,20 @@
 
 <body>
 
-    <section class="nav">
+    <section class="nav hide">
         <div class="container py25">
             <div class="circle navbar-item">
             img
             </div>
-        <ul class="navbar-list f-right">
-            <li class="navbar-item">about</li>
-            <li class="navbar-item">contact</li>
-        </ul>
-    </div>
+            <ul class="navbar-list f-right">
+                <li class="navbar-item"><a href="#about">about</a></li>
+                <li class="navbar-item">contact</li>
+            </ul>
+        </div>
     </section>
 
     <section class="intro">
-        <div class="container py150">
+        <div class="container py100">
             <div class="libre-baskerville">
                 <div class="big">Hi, I'm Natalie Uduwela;</div>
                 <div class="medium">web developer & sometimes designer.</div>
