remove links in likes section

--- a/public/index.html
+++ b/public/index.html
@@ -44,10 +44,10 @@
         </div>
     </section>
 
-    <section class="likes">
+    <section class="likes" name="#about">
         <div class="container py100">
             <div class="libre-baskerville">
-                <div class="small">I especially like JavaScript, <a href="#"><span class="link">clean & simple UI/UX</span></a>, songs I can sing-a-long to, typography, and earthy IPAs. When I'm not writing software or making things with my hands, you'll find me many miles away on my bike. Or <a href="http://whereshouldibrunchtoday.com" target="_blank"><span class="link">brunching</span></a>.</div>
+                <div class="small">I especially like JavaScript, clean & simple UI/UX, songs I can sing-a-long to, typography, and earthy IPAs. When I'm not writing software or making things with my hands, you'll find me many miles away on my bike. Or brunching.</div>
             </div>
         </div>
     </section>
