--- a/public/index.html
+++ b/public/index.html
@@ -55,14 +55,18 @@
     <section class="more">
         <div class="container py100">
             <div class="libre-baskerville">
-                <div class="small">Want more? Read about this thing I did, check out my resume, or get in touch.</div>
+                <div class="small">Want more? Read about <a href="http://natatdbc.tumblr.com/   " target="_blank">this thing I did</a> , check out my <a href="https://drive.google.com/open?id=0B6aD21Zk3TmxTVliV3doWGlQV28&authuser=1" target="_blank">resume</a>, or <a href="mailto:natuduwela@gmail.com" target="_blank">get in touch</a> (will exchange life lessons for beer).</div>
             </div>
         </div>
     </section>
 
     <section class="footer">
         <div class="container py25">
-            woah bro
+            <ul class="navbar-list f-right">
+                <li class="navbar-item">linkedin</li>
+                <li class="navbar-item">github</li>
+                <li class="navbar-item">twitter</li>
+            </ul>
         </div>
     </section>
 
