add media padding and links, change naming later

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
     </section>
 
     <section class="intro">
-        <div class="container py100">
+        <div class="container py150 sm-py75">
             <div class="libre-baskerville">
                 <div class="big">Hi, I'm Natalie Uduwela;</div>
                 <div class="medium">web developer & sometimes designer.</div>
@@ -45,7 +45,7 @@
     </section>
 
     <section class="likes" name="#about">
-        <div class="container py100">
+        <div class="container py100 sm-py75">
             <div class="libre-baskerville">
                 <div class="small">I especially like JavaScript, clean & simple UI/UX, songs I can sing-a-long to, typography, and earthy IPAs. When I'm not writing software or making things with my hands, you'll find me many miles away on my bike. Or brunching.</div>
             </div>
@@ -53,9 +53,9 @@
     </section>
 
     <section class="more">
-        <div class="container py100">
+        <div class="container py100 sm-py75">
             <div class="libre-baskerville">
-                <div class="small">Want more? Read about <a href="http://natatdbc.tumblr.com/   " target="_blank">this thing I did</a> , check out my <a href="https://drive.google.com/open?id=0B6aD21Zk3TmxTVliV3doWGlQV28&authuser=1" target="_blank">resume</a>, or <a href="mailto:natuduwela@gmail.com" target="_blank">get in touch</a> (will exchange life lessons for beer).</div>
+                <div class="small">Want more? Read about <a href="http://natatdbc.tumblr.com/   " target="_blank">this thing I did</a>, check out my <a href="https://drive.google.com/open?id=0B6aD21Zk3TmxTVliV3doWGlQV28&authuser=1" target="_blank">resume</a>, or <a href="mailto:natuduwela@gmail.com" target="_blank">get in touch</a> (will exchange life lessons for beer).</div>
             </div>
         </div>
     </section>
@@ -63,9 +63,9 @@
     <section class="footer">
         <div class="container py25">
             <ul class="navbar-list f-right">
-                <li class="navbar-item">linkedin</li>
-                <li class="navbar-item">github</li>
-                <li class="navbar-item">twitter</li>
+                <li class="navbar-item"><a href="http://linkedin.com/in/natalieuduwela" target="_blank"><i class="fa fa-linkedin"></a></i></li>
+                <li class="navbar-item"><a href="http://github.com/natatat" target="_blank"><i class="fa fa-github"></a></i></li>
+                <li class="navbar-item"><a href="http://twitter.com/natuduwela" target="_blank"><i class="fa fa-twitter"></a></i></li>
             </ul>
         </div>
     </section>
