--- a/index.html
+++ b/index.html
@@ -1,58 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <link rel="stylesheet" type="text/css" href="build/css/styles.css">
-  <link rel="icon" href="/favicon.ico" type="image/x-icon">
-  <meta name="viewport" content="width=device-width"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link rel="stylesheet" type="text/css" href="build/css/styles.css">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <meta name="viewport" content="width=device-width"/>
 
-  <title>natalieuduwela.com</title>
-  <meta name="description" content="coder + designer + maker"/>
-  <meta name="keywords" content="Natalie, Uduwela, San Francisco, Web Development, Web Design, Javascript"/>
-  <meta name="author" content="Natalie Uduwela"/>
+    <title>Natalie Uduwela</title>
+    <meta name="description" content="coder + designer + maker"/>
+    <meta name="keywords" content="Natalie, Uduwela, Natalie Uduwela, San Francisco, Web Development, Web Design, Javascript"/>
+    <meta name="author" content="Natalie Uduwela"/>
 
-  <!-- start Google Analytics -->
-  <script>
+    <!-- start Google Analytics -->
+    <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
     ga('create', 'UA-36982620-1', 'auto');
-  </script>
-  <!-- end Google Analytics -->
+    </script>
+    <!-- end Google Analytics -->
 </head>
 
 <body>
 
-  <div class="container">
-    <div class="clearfix">
-
-      <div class="col-10 px2 mx-auto">
-        <div class="mb3">
-          <h1 class="mb0 md-show">I'm Natalie Uduwela;</h1>
-          <h2 class="mb0 md-hide">I'm Natalie Uduwela;</h2>
-          <h2 class="mt0 md-show"><a href="http://www.github.com/natatat" target="_blank">coder</a> + designer + maker</h2>
-          <h3 class="mt0 md-hide"><a href="http://www.github.com/natatat" target="_blank">coder</a> + designer + maker</h3>
+    <section class="nav hide">
+        <div class="container py25">
+            <div class="circle navbar-item">
+            img
+            </div>
+            <ul class="navbar-list f-right">
+                <li class="navbar-item"><a href="#about">about</a></li>
+                <li class="navbar-item">contact</li>
+            </ul>
         </div>
+    </section>
 
-<!--         <div class="skills-graph">
-          <canvas id="chart" height="120"></canvas>
-        </div> -->
-
-        <div class="mt2">
-          <div class="italic bold">Want more?</div>
-          <ul class="list-reset">
-            <li><a href="http://natatdbc.tumblr.com" target="_blank">Read about this thing I did</a></li>
-            <li><a href="http://dl.dropboxusercontent.com/u/36316618/20131129_natalieuduwela.pdf" target="_blank">Check out my resume</a></li>
-            <li><a href="http://www.linkedin.com/in/natalieuduwela" target="_blank">Meet the professional me</a></li>
-          </ul>
+    <section class="intro">
+        <div class="container py150 sm-py75">
+            <div class="libre-baskerville">
+                <div class="big">Hi, I'm Natalie Uduwela;</div>
+                <div class="medium">web developer & sometimes designer.</div>
+            </div>
         </div>
-      </div>
+    </section>
 
-    </div>
-  </div>
+    <section class="likes" name="#about">
+        <div class="container py100 sm-py75">
+            <div class="libre-baskerville">
+                <div class="small">I especially like JavaScript, clean & simple UI/UX, songs I can sing-a-long to, typography, and earthy IPAs. When I'm not writing software or making things with my hands, you'll find me many miles away on my bike. Or brunching.</div>
+            </div>
+        </div>
+    </section>
 
-  <script type="application/javascript" src="build/mergedAssets.js"></script>
-  <script type="application/javascript" src="build/app.js"></script>
+    <section class="more">
+        <div class="container py100 sm-py75">
+            <div class="libre-baskerville">
+                <div class="small">Want more? Read about <a href="http://natatdbc.tumblr.com/   " target="_blank">this thing I did</a>, check out my <a href="https://drive.google.com/open?id=0B6aD21Zk3TmxTVliV3doWGlQV28&authuser=1" target="_blank">resume</a>, or <a href="mailto:natuduwela@gmail.com" target="_blank">get in touch</a> (will exchange life lessons for beer).</div>
+            </div>
+        </div>
+    </section>
+
+    <section class="footer">
+        <div class="container py25">
+            <ul class="navbar-list f-right">
+                <li class="navbar-item"><a href="http://linkedin.com/in/natalieuduwela" target="_blank"><i class="fa fa-linkedin"></a></i></li>
+                <li class="navbar-item"><a href="http://github.com/natatat" target="_blank"><i class="fa fa-github"></a></i></li>
+                <li class="navbar-item"><a href="http://twitter.com/natuduwela" target="_blank"><i class="fa fa-twitter"></a></i></li>
+            </ul>
+        </div>
+    </section>
+
+    <script type="application/javascript" src="build/mergedAssets.js"></script>
+    <script type="application/javascript" src="build/app.js"></script>
 </body>
 </html>
