remove .libre-baskerville divs, dry it up in .container css

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <section class="more">
         <div class="container py100 sm-py75">
             <div class="libre-baskerville">
-                <div class="small">Want more? Read about <a href="http://natatdbc.tumblr.com/   " target="_blank">this thing I did</a>, check out my <a href="https://drive.google.com/open?id=0B6aD21Zk3TmxTVliV3doWGlQV28&authuser=1" target="_blank">resume</a>, or <a href="mailto:natuduwela@gmail.com" target="_blank">get in touch</a> (will exchange life lessons for beer).</div>
+                <div class="small">Want more? Read about <a href="http://natatdbc.tumblr.com/   " target="_blank">this thing I did</a>, check out my <a href="https://drive.google.com/open?id=0B6aD21Zk3TmxTVliV3doWGlQV28&authuser=1" target="_blank">resume</a>, or <a href="mailto:natuduwela@gmail.com" target="_blank">get in touch</a> (will exchange life lessons for beer, or vice versa).</div>
             </div>
         </div>
     </section>
