--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="build/css/styles.css">
     <meta name="viewport" content="width=device-width"/>
     <title>Natalie Uduwela</title>
-    <meta name="description" content="coder + designer + maker"/>
+    <meta name="description" content="I'm Natalie Uduwela, web developer and designer."/>
     <meta name="keywords" content="Natalie, Uduwela, Natalie Uduwela, San Francisco, Web Development, Web Design, Javascript"/>
     <meta name="author" content="Natalie Uduwela"/>
 
