--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" type="text/css" href="build/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
     <meta name="viewport" content="width=device-width"/>
     <title>Natalie Uduwela</title>
     <meta name="description" content="I'm Natalie Uduwela, web developer and designer."/>
@@ -20,7 +20,7 @@
     <!-- end Google Analytics -->
 </head>
 
-<body>
+<body class="home">
     <section id="nav">
         <div class="container">
             <div class="circle navbar-item">N</div>
@@ -36,7 +36,7 @@
     <section id="intro">
         <div class="container">
             <div class="big">Hi, I’m Natalie Uduwela;</div>
-            <div class="medium">web developer & sometimes designer.</div>
+            <div class="medium">web <a href="/dev.html">developer</a> & sometimes <a href="/design.html">designer</a>.</div>
         </div>
     </section>
 
@@ -48,7 +48,7 @@
 
     <section id="more">
         <div class="container py100 sm-py75">
-            <div class="small">Want more? Read about <a href="http://natatdbc.tumblr.com/" target="_blank">this thing I did</a>, check out my <a href="https://drive.google.com/file/d/0B6aD21Zk3TmxZUEzWHp5Slp4U0E/view" target="_blank">resume</a>, or <a href="mailto:natuduwela@gmail.com" target="_blank">get in touch</a> (will exchange life lessons for beer, or vice versa).</div>
+            <div class="small">Want more? Read about <a href="http://natatdbc.tumblr.com/" target="_blank">this thing I did</a>, check out my <a href="https://drive.google.com/open?id=0B6aD21Zk3TmxTVliV3doWGlQV28&authuser=1" target="_blank">resume</a>, or <a href="mailto:natuduwela@gmail.com" target="_blank">get in touch</a> (will exchange life lessons for beer, or vice versa).</div>
         </div>
     </section>
 
@@ -62,7 +62,7 @@
         </div>
     </section>
 
-    <script type="application/javascript" src="build/mergedAssets.js"></script>
-    <script type="application/javascript" src="build/app.js"></script>
+    <script type="application/javascript" src="mergedAssets.js"></script>
+    <script type="application/javascript" src="app.js"></script>
 </body>
 </html>
